# tracescope

./: .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml
.config/: nextest.toml
.github/workflows/: ci.yml
crates/tracescope-app/: Cargo.toml
crates/tracescope-app/src/: main.rs
crates/tracescope-core/: Cargo.toml
crates/tracescope-core/benches/: hot_paths.rs
crates/tracescope-core/src/: collector.rs  lib.rs  model.rs  query.rs  store.rs
crates/tracescope-ui/: Cargo.toml
crates/tracescope-ui/src/: app.rs  lib.rs
crates/tracescope-ui/src/views/: connection.rs  mod.rs  resources.rs  sessions.rs  tasks.rs  timeline.rs  warnings.rs
crates/tracescope-ui/src/widgets/: mod.rs  status_bar.rs
examples/demo-server/: Cargo.toml
examples/demo-server/src/: main.rs
