[workspace]
members = [
    "crates/tracescope-core",
    "crates/tracescope-ui",
    "crates/tracescope-app",
    "examples/demo-server",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
rust-version = "1.81"
authors = ["Sawyer"]
repository = "https://github.com/sawyer/tracescope"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.6", features = ["derive", "env"] }
console-api = { version = "0.9.0", features = ["transport"] }
console-subscriber = "0.5.0"
dirs = "6"
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "wayland", "wgpu", "x11"] }
egui = "0.33.3"
egui_extras = "0.33.3"
prost = "0.14"
prost-types = "0.14"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1.50.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tonic = { version = "0.14.5", features = ["transport"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

