[package]
name = "tracescope-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
eframe.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracescope-core = { path = "../tracescope-core" }
tracescope-ui = { path = "../tracescope-ui" }
wgpu.workspace = true
